Added the "Delete Habit" context menu and made it functional using JavaScript. Followed the video series to completion, but will begin work on a few additions (maybe some changes to styling, as well as making a way for the context menu to be deactivated if someone doesn't want to delete something).

--- a/index.html
+++ b/index.html
@@ -73,5 +73,9 @@
             </div>
         </div>
     </div>
+    <div class="context-menu">
+        <p id="habitTitle"></p>
+        <button id="deleteHabit">Delete Habit</button>
+    </div>
 </body>
 </html>
